# WeatherStation

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
.github/workflows/: testing.yml
data/: config.json.example  secrets.json.example
include/battery/: BatteryMonitor.h
include/config/: AppConfig.h  Config.h  ConfigLoader.h  HTTPConfig.h  MQTTConfig.h  NetworkConfig.h  StationConfig.h
include/controller/: WeatherStationController.h
include/filesystem/: IFileSystem.h  LittleFSAdapter.h  NativeFileAdapter.h
include/logging/: Logger.h  SerialLogger.h
include/model/: Observation.h  ObservationBatch.h
include/network/: NetworkInfo.h
include/publisher/: HTTPPublisher.h  HttpPublisher.h  MqttPublisher.h  Publisher.h  PublisherFactory.h
include/sensors/: BMP280Sensor.h  SHT41Sensor.h  Sensor.h  SensorFactory.h
include/serialization/: ObservationSerializer.h
include/time/: ArduinoClock.h  Clock.h
src/: main.cpp
src/config/: ConfigLoader.cpp
src/controller/: WeatherStationController.cpp
src/filesystem/: LittleFSAdapter.cpp  NativeFileAdapter.cpp
src/logging/: SerialLogger.cpp
src/publisher/: HTTPPublisher.cpp  HttpPublisher.cpp  MqttPublisher.cpp  Publisher.cpp  PublisherFactory.cpp
src/sensors/: BMP280Sensor.cpp  SHT41Sensor.cpp  Sensor.cpp  SensorFactory.cpp
src/serialization/: ObservationSerializer.cpp
src/time/: ArduinoClock.cpp
test/mocks/: MockBatteryMonitor.h  MockClock.h  MockConstructedPublisher.h  MockConstructedSensor.h  MockHttpClient.h  MockLogger.h  (+5 more)
test_endpoint/: Dockerfile  go.mod  ingestHandler.go  main.go
(+34 files in other folders)
